--- a/backend/src/email/templates/email-auth.hbs
+++ b/backend/src/email/templates/email-auth.hbs
@@ -2,12 +2,6 @@
   <head>
     <meta name='viewport' content='width=device-width, initial-scale=1.0' />
     <meta http-equiv='Content-Type' content='text/html; charset=UTF-8' />
-    <link rel='preconnect' href='https://fonts.googleapis.com' />
-    <link rel='preconnect' href='https://fonts.gstatic.com' crossorigin />
-    <link
-      href='https://fonts.googleapis.com/css2?family=Nanum+Gothic:wght@400;700;800&display=swap'
-      rel='stylesheet'
-    />
     <style>
       * { margin: 0; padding: 0; font-family: 'Nanum Gothic', Helvetica, Arial,
       sans-serif; } .header { background-color: #DC2626; text-align: left;
@@ -39,7 +33,7 @@
       </p>
     </div>
     <div class='footer'>
-      ⓒ 2023 KAFA CO.,LTD All Rights Reserved
+      ⓒ {{currentYear}} KAFA CO.,LTD All Rights Reserved
     </div>
   </body>
 </html>
