--- a/frontend/src/styles/app.css
+++ b/frontend/src/styles/app.css
@@ -1,3 +1,31 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer utilities {
+  .overflow-x-auto::-webkit-scrollbar {
+    width: 8px;
+    height: 8px;
+  }
+  .overflow-x-auto::-webkit-scrollbar-thumb {
+    background-color: #4a5568;
+    border-radius: 3px;
+    border: 1px solid #f7fafc;
+  }
+  .overflow-x-auto::-webkit-scrollbar-track {
+    background-color: transparent;
+  }
+
+  .overflow-y-auto::-webkit-scrollbar {
+    width: 11px;
+    height: 11px;
+  }
+  .overflow-y-auto::-webkit-scrollbar-thumb {
+    background-color: #4a5568;
+    border-radius: 3px;
+    border: 1px solid #f7fafc;
+  }
+  .overflow-y-auto::-webkit-scrollbar-track {
+    background-color: transparent;
+  }
+}
